0.6 - extensive refactoring to support http and fcgi protocols.
added support for file descriptor passing and high availability.
refactored the embedded management server to use threads instead of the
nasty alarm-based loop.
added handlers for init_child/exit_child to better hook in fork-sensitive code.

0.5.10 - make sure the management server code doesn't orphan the pre-spawned
child processes.

0.5.9 - refactored for greater flexibility.

0.5.8 - added a fix for python 2.6 changes to the embedded http server

0.5.7 - added init/exit handlers to allow more code control within the child
process.

0.5.6 - add a warm-up request count for profiling so you can more easily 
sample a "hot" server. fixed the macro memory profiler.

0.5.5 - added support for alternate profilers and remote fetching of profile
data.

0.5.4 - added support for unix domain sockets. misc cleanup.

0.5.3 - requires py-fastcgi-1.3, adds support for a timeout between the
accept() and the first read() on the input socket. this should fix an issue
with half-opened connections stacking up and causing the server to hang.

0.5.1 - validate the memory usage keys in linux_get_memory_usage to prevent
crash bug in the 'boss' process

0.5 - removed all of the stats code. this is better handled as another separate
module. see spyglass.

0.4.1 - added linux-specific memory supervisor and added more error handling
in the manager.

0.4 - a good, stable release